--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="service-box">
               <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
               <h3>Made with Love</h3>
-              <p class="text-muted">You have to make your websites with love these days!</p>
+              <p class="text-muted"> <p>Send icon: <span class="glyphicon glyphicon-send"></p>
             </div>
           </div>
         </div>
@@ -231,18 +231,13 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Let's Get In Touch!</h2>
             <hr class="primary">
-            <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+            <p>I am seeking full-time opportunities related to data analytics, product management or user experience, so please feel free to reach out to me. Or if you just want to chat and talk about the latest trends in usability or pretty much anything, let's connect! You can find me on LinkedIn or email me, and I'll definitely be in touch! </p>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-4 ml-auto text-center">
-            <i class="fa fa-phone fa-3x sr-contact"></i>
-            <p>123-456-6789</p>
-          </div>
           <div class="col-lg-4 mr-auto text-center">
             <i class="fa fa-envelope-o fa-3x sr-contact"></i>
             <p>
-              <a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a>
+              <a href="mailto:your-email@your-domain.com">rishikar@umich.edu</a>
             </p>
           </div>
         </div>
